# future_skill_classification

./: .gitignore  Gen_Conda_Enviorment.ipynb  Gen_Poetry_Enviorment.ipynb  README.md  environment.yaml  pyproject.toml
Py/: Tiny_Few_Shot_Classifier.html  Tiny_Few_Shot_Classifier.ipynb  Tiny_Few_Shot_Multi_Lable_Classifer.ipynb  Use_Tiny_Few_Shot_Classifier.ipynb  process_and_predict.py
Py/notebooks/: Tiny_Few_Shot_Multi_Lable_Classifer.ipynb  Tiny_Zero_Shot_Classifier.ipynb  Use_Tiny_Few_Shot_Multi_Lable_Classifier.ipynb  classify_hex.ipynb  gen_plot_datenportal_fs_skills.ipynb
R/: Create_Traindata_FS Classifier_hya.R  classify_fs.yml  classify_with_R.r  data_prep_data_yannic.R  extract_hex_skills.R  hex_data_prep.R  plot_hex_skills.R  test_data_generation.r  test_data_prep_version_2.R
