[tool.poetry]
name = "future-skill-classification"
version = "0.1.0"
description = ""
authors = ["Malte Hückstädt <deaddatascientists@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.0.1"
sentence-transformers = "^3.2.0"
setfit = "^1.1.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
transformers = "^4.45.2"
numpy = "^2.1.2"
unidecode = "^1.3.8"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"
tqdm = "^4.66.5"
platformdirs = "^4.3.6"
pyreadr = "^0.5.2"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 