[tool.poetry]
name = "future-skill-classification"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Malte Hückstädt <deaddatascientists@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.0.2"
sentence-transformers = "^3.2.1"
setfit = "^1.1.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
transformers = "^4.46.1"
torch = "^2.5.1"
numpy = "^2.1.2"
unidecode = "^1.3.8"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
